--- a/app.json
+++ b/app.json
@@ -1,8 +1,8 @@
 {
   "name": "Alena-MD",
   "description": "whatsapp md bot build with nodejs",
-  "repository": "https://github.com/Afx-Abu/Alena-MD",
-  "logo": "https://github.com/Afx-Abu/Alena-MD",
+  "repository": "https://github.com/dominator454/Alena-MD",
+  "logo": "https://github.com/dominator454/Alena-MD",
   "keywords": ["nodejs", "bot", "whatsapp bot", "whatsapp automation", "multi device"],
   "buildpacks": [
     {
