--- a/package.json
+++ b/package.json
@@ -69,10 +69,10 @@
   "devDependencies": {},
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Afx-Abu/Alena-MD.git"
+    "url": "git+https://github.com/dominator454/Alena-MD.git"
   },
   "bugs": {
-    "url": "https://github.com/Afx-Abu/Alena-MD/issues"
+    "url": "https://github.com/dominator454/Alena-MD/issues"
   },
-  "homepage": "https://github.com/Afx-Abu/Alena-MD#readme"
+  "homepage": "https://github.com/dominator454/Alena-MD#readme"
 }
